📂 Implémentation getFile() & FileToJson() #4

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
+
+    // JSON
+    implementation 'org.json:json:20231013'
 }
 
 test {
